Fixed the small viewport by hiding the x overflow

--- a/styling/base.css
+++ b/styling/base.css
@@ -17,8 +17,10 @@ html {
 
 html, body {
     position: static; 
+    margin-left: auto;
+    margin-right: auto; 
+    overflow-x: hidden; 
 }
-
 
 body {
     margin: 0px; 
